# presenton

./: .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  README.md  package.json  render.yaml  start.js  vercel.json
.github/workflows/: docker-ghcr.yml
.vercel/: .env.development.local  project.json
.vercel/output/: builds.json  config.json
.vercel/output/diagnostics/: cli_traces.json  trace
.vercel/output/functions/: account.prerender-config.json  account.prerender-fallback.html  account.rsc.prerender-config.json  account.rsc.prerender-fallback.rsc  custom-template.prerender-config.json  custom-template.prerender-fallback.html  custom-template.rsc.prerender-config.json  custom-template.rsc.prerender-fallback.rsc  dashboard.prerender-config.json  dashboard.prerender-fallback.html  icon2.png.rsc.func  (+39 more)
app_mcp/: __init__.py
app_mcp/services/: __init__.py  workflow_orchestrator.py
app_mcp/tools/: __init__.py  _helpers.py  choose_layout.py  continue_workflow.py  export_presentation.py  get_status.py  help_me.py  show_layouts.py  start_presentation.py
scripts/: deploy-render.sh  deploy-vercel.sh
servers/fastapi/: Dockerfile  pyproject.toml  server.py
servers/fastapi/api/: lifespan.py  main.py
servers/fastapi/api/v1/ppt/endpoints/: presentation.py
servers/fastapi/constants/: llm.py
servers/fastapi/enums/: image_provider.py  llm_provider.py
servers/fastapi/services/: database.py  documents_loader.py  icon_finder_service.py  image_generation_service.py  llm_client.py  llm_tool_calls_handler.py  pptx_presentation_creator.py  temp_file_service.py
servers/fastapi/tests/: test_gemini_schema_support.py  test_openai_schema_support.py
servers/fastapi/utils/: db_utils.py  get_env.py  image_provider.py  llm_provider.py  model_availability.py
servers/fastapi/utils/llm_calls/: generate_presentation_outlines.py
servers/nextjs/: .eslintrc.json  .vercelignore  next.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
(+167 files in other folders)
