[project]
name = "presenton-backend"
version = "0.1.9"
description = "presenton fastapi backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.24",
    "greenlet>=3.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "redis>=6.2.0",
    "dirtyjson>=1.0.8",
    "pathvalidate>=3.3.1",
    "openai>=1.0.0",
    "anthropic>=0.24.0",
    "google-genai",
    "chromadb>=1.0.15",
    "python-pptx>=0.6.21",
    "Pillow>=10.4.0",
    "lxml>=5.3.0",
    "pdfplumber>=0.11.4",
    "docling>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "constants*", "enums*", "models*", "services*", "static*", "assets*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
